시연에 필요한 API 완성
- 장비 등록 API
- 장비 카테고리 리스트 API
- 네트워크 카테고리 리스트 API
- 장비 환경 리스트 API

--- a/Src/Hurryup_Server/Hurryup_Server.vcxproj
+++ b/Src/Hurryup_Server/Hurryup_Server.vcxproj
@@ -129,6 +129,7 @@
     <ClCompile Include="CDashBoardRestApi.cpp" />
     <ClCompile Include="CDatabase.cpp" />
     <ClCompile Include="CDeviceRestApi.cpp" />
+    <ClCompile Include="CEnvironmentRestApi.cpp" />
     <ClCompile Include="CInspectionApi.cpp" />
     <ClCompile Include="CMessage.cpp" />
     <ClCompile Include="CMonitoringRestApi.cpp" />
@@ -147,6 +148,7 @@
     <ClInclude Include="CDashBoardRestApi.h" />
     <ClInclude Include="CDatabase.h" />
     <ClInclude Include="CDeviceRestApi.h" />
+    <ClInclude Include="CEnvironmentRestApi.h" />
     <ClInclude Include="CInspectionApi.h" />
     <ClInclude Include="CMessage.h" />
     <ClInclude Include="CMonitoringRestApi.h" />
